Fix events cover ratio on Firefox
See #17

--- a/src/components/preview.event.scss
+++ b/src/components/preview.event.scss
@@ -7,16 +7,17 @@
   background: white;
 
   .preview-event-container {
-    display: flex;
-
     width: 100%;
     height: 100%;
     padding: 1rem;
     border: none;
 
     .preview-event-cover {
+      float: left;
+      margin-bottom: 1rem;
+      @include clearfix;
+
       position: relative;
-      flex: none;
       width: 33.33%;
       height: 0;
       padding-bottom: 33.33%;
@@ -102,10 +103,12 @@
 
 @media (max-width: breakpoint(phone)) {
   .preview-event {
+    margin-bottom: 2rem;
     .preview-event-container {
       flex-direction: column;
 
       .preview-event-cover {
+        float: none;
         width: 100%;
         height: auto;
         border: none;
